syntax = "proto3";
package im.v1;
option go_package = "github.com/EthanQC/IM/api/gen/im/v1;imv1";

import "google/protobuf/timestamp.proto";

// 会话类型
enum ConversationType {
  CONVERSATION_TYPE_UNSPECIFIED = 0;
  CONVERSATION_TYPE_SINGLE = 1;
  CONVERSATION_TYPE_GROUP = 2;
}

// 消息内容类型
enum MessageContentType {
  MESSAGE_CONTENT_TYPE_UNSPECIFIED = 0;
  MESSAGE_CONTENT_TYPE_TEXT = 1;
  MESSAGE_CONTENT_TYPE_IMAGE = 2;
  MESSAGE_CONTENT_TYPE_FILE = 3;
  MESSAGE_CONTENT_TYPE_AUDIO = 4;
  MESSAGE_CONTENT_TYPE_VIDEO = 5;
  MESSAGE_CONTENT_TYPE_CALL_INVITE = 6;
  MESSAGE_CONTENT_TYPE_CALL_ACCEPT = 7;
  MESSAGE_CONTENT_TYPE_CALL_REJECT = 8;
  MESSAGE_CONTENT_TYPE_CALL_END = 9;
}

message UserBrief {
  int64 id = 1;
  string username = 2;
  string display_name = 3;
  string avatar_url = 4;
}

message ConversationBrief {
  int64 id = 1;
  ConversationType type = 2;
  string title = 3;
}

// 媒体/文件元信息
message MediaRef {
  string object_key = 1;
  string filename = 2;
  string content_type = 3;
  int64  size_bytes = 4;
  int32  duration_sec = 5;
  string thumbnail_key = 6;
}

message TextBody { string text = 1; }
message CallBody { string convo_hint = 1; }

message MessageBody {
  oneof body {
    TextBody text = 1;
    MediaRef image = 2;
    MediaRef file = 3;
    MediaRef audio = 4;
    MediaRef video = 5;
    CallBody  call  = 6;
  }
}

message MessageItem {
  int64 id = 1;
  int64 conversation_id = 2;
  int64 sender_id = 3;
  int64 seq = 4;
  MessageContentType content_type = 5;
  MessageBody body = 6;
  google.protobuf.Timestamp create_time = 7;
}